--- a/skin/adminhtml/default/default/headerbar.css
+++ b/skin/adminhtml/default/default/headerbar.css
@@ -14,6 +14,7 @@ body.headerbar-added {
 
 #headerbar .gitinfo {
     float: right;
+    color: #000;
 }
 
 #headerbar:before {
@@ -24,8 +25,8 @@ body.headerbar-added {
 #headerbar span, #headerbar:before {
     display: inline-block;
     height: 22px;
-    padding: 0px 10px;
-    margin: 0px 25px;
+    padding: 0 10px;
+    margin: 0;
     background: #0c0c0c;
 }
 
@@ -33,13 +34,25 @@ body.headerbar-added {
     background: #009900;
     color: #009900;
 }
+#headerbar.development span {
+    background: #000;
+    color: #009900;
+}
 
 #headerbar.staging {
     background: #F5B800;
     color: #F5B800;
 }
+#headerbar.staging span {
+    background: #000;
+    color: #F5B800;
+}
 
 #headerbar.production {
     background: red;
+    color: red;
+}
+#headerbar.production span {
+    background: #000;
     color: red;
 }
