update to notice of applied patches update to possibility of overriding email templates in your own Magento theme add layout xml conditions (credits to [Aoe_LayoutConditions](https://github.com/fbrnc/Aoe_LayoutConditions) by Fabrizio Branca) conditionally enable headerbar in backend (and make css dependent) add php 7 to travis testing (experimental)

--- a/app/design/adminhtml/default/default/layout/devtools.xml
+++ b/app/design/adminhtml/default/default/layout/devtools.xml
@@ -21,10 +21,10 @@
     <default>
         <reference name="before_body_end">
             <block type="core/template" template="devtools/appliedpatches.phtml" name="ffuenf.applied.patches"/>
-            <block after="-" type="ffuenf_devtools/adminhtml_headerbar" name="ffuenf.headerbar"/>
+            <block after="-" type="ffuenf_devtools/adminhtml_headerbar" name="ffuenf.headerbar" ifconfig="ffuenf_devtools/headerbar/enable"/>
         </reference>
         <reference name="head">
-            <action method="addCss">
+            <action method="addCss" ifconfig="ffuenf_devtools/headerbar/enable">
                 <name>headerbar.css</name>
             </action>
         </reference>
