--- a/app/design/adminhtml/default/default/template/ffuenf/devtools/backup.phtml
+++ b/app/design/adminhtml/default/default/template/ffuenf/devtools/backup.phtml
@@ -1,11 +1,29 @@
+<?php
+/**
+ * Ffuenf_DevTools extension.
+ *
+ * NOTICE OF LICENSE
+ *
+ * This source file is subject to the MIT License
+ * that is bundled with this package in the file LICENSE.txt.
+ * It is also available through the world-wide-web at this URL:
+ * http://opensource.org/licenses/mit-license.php
+ *
+ * @category   Ffuenf
+ *
+ * @author     Achim Rosenhagen <a.rosenhagen@ffuenf.de>
+ * @copyright  Copyright (c) 2016 ffuenf (http://www.ffuenf.de)
+ * @license    http://opensource.org/licenses/mit-license.php MIT License
+ */
+?>
 <div class="content-header">
     <table cellspacing="0">
         <tbody>
             <tr>
-                <td style="width:50%;"><h3 class="icon-head head-diagnostic-checkModules"><?= $this->__('Create stripped mysql dump'); ?></h3></td>
+                <td style="width:50%;"><h3 class="head-ffuenf-sysinfo icon-head"><?php echo $this->__('Create stripped mysql dump'); ?></h3></td>
                 <td class="form-buttons"></td>
             </tr>
         </tbody>
     </table>
 </div>
-<button id="button" class="scalable" onclick="setLocation('<?= $this->getUrl('devtools/backup/backup'); ?>')" type="adminhtml/widget_button" title="<?= Mage::helper('ffuenf_devtools')->__('Create mysql backup'); ?>"><span><span><span><?= Mage::helper('ffuenf_devtools')->__('Create stripped mysql dump'); ?></span></span></span></button>
+<button id="button" class="scalable" onclick="setLocation('<?php echo $this->getUrl('*/*/'); ?>')" type="adminhtml/widget_button" title="<?php echo Mage::helper('ffuenf_devtools')->__('Create mysql backup'); ?>"><span><span><span><?php echo Mage::helper('ffuenf_devtools')->__('Create stripped mysql dump'); ?></span></span></span></button>
